--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,35 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+header {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.gameBlock {
+  display: block;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-right: 12px;
+  padding-left: 12px;
+  text-align: center;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.gameBlock .image {
+  padding: 2.15rem 1.5rem .25rem;
+  filter: saturate(130%) contrast(115%) drop-shadow(0px 5px 5px);
 }
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 
 @keyframes App-logo-spin {
   from {
